--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "markdown": "~0.5.0",
     "mongodb": "~1.4.7",
     "async": "~0.9.0",
-    "serve-favicon": "~2.0.1"
+    "serve-favicon": "~2.0.1",
+    "jade": "~1.5.0",
+    "express-session": "~1.7.1",
+    "morgan": "~1.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-wiredep": "~1.8.0"
+    "grunt-wiredep": "~1.8.0",
+    "mocha": "~1.21.0"
   }
 }
