--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple blog engine for complex people.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,8 @@
     "serve-favicon": "~2.0.1",
     "jade": "~1.5.0",
     "express-session": "~1.7.1",
-    "morgan": "~1.2.1"
+    "morgan": "~1.2.1",
+    "body-parser": "~1.5.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
