--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "angular": "~1.2.20",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "medium-editor": "~1.9.0",
+    "medium-editor-insert-plugin": "~0.2.9"
   }
 }
