--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jade": "~1.5.0",
     "express-session": "~1.7.1",
     "morgan": "~1.2.1",
-    "body-parser": "~1.5.2"
+    "body-parser": "~1.5.2",
   },
   "devDependencies": {
     "grunt": "~0.4.5",
