--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express-session": "~1.7.1",
     "morgan": "~1.2.1",
     "body-parser": "~1.5.2",
-    "validator": "~3.17.0"
+    "validator": "~3.17.0",
+    "cookie-parser": "~1.3.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
