--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "~1.2.1",
     "body-parser": "~1.5.2",
     "validator": "~3.17.0",
-    "cookie-parser": "~1.3.2"
+    "cookie-parser": "~1.3.2",
+    "connect-flash": "~0.1.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
