--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "body-parser": "~1.5.2",
     "validator": "~3.17.0",
     "cookie-parser": "~1.3.2",
-    "connect-flash": "~0.1.1"
+    "connect-flash": "~0.1.1",
+    "connect-mongo": "~0.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
